# ChangeLog for sys-fs/squashmount
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*squashmount-8.6 (23 Aug 2014)

  23 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*squashmount-8.5 (21 Aug 2014)

  21 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*squashmount-8.4 (20 Aug 2014)

  20 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Add USE=example

*squashmount-8.3 (19 Aug 2014)

  19 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*squashmount-8.2 (18 Aug 2014)

  18 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*squashmount-8.1 (17 Aug 2014)

  17 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*squashmount-8.0 (16 Aug 2014)

  16 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Advanced configuration

*squashmount-7.12 (15 Aug 2014)

  15 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*squashmount-7.11 (09 Aug 2014)

  09 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*squashmount-7.10 (30 Jul 2014)

  08 Aug 2014; Martin Väth <martin@mvath.de>:
  Be more strict with optfeature

  30 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*squashmount-7.9 (29 Jul 2014)

  29 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*squashmount-7.8 (28 Jul 2014)

  28 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*squashmount-7.7 (18 Jul 2014)

  18 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*squashmount-7.6 (17 Jul 2014)

  17 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*squashmount-7.5 (16 Jul 2014)

  16 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*squashmount-7.4 (09 Jul 2014)
