@@ -1,1 +1,1 @@
-DIST find_cruft-2.4.tar.gz 9224 SHA256 b071979fd9a8481a81cf1d9ce417e1b77a57160fac603a196187fc5b5c934b31 SHA512 2babec633ff198c7075652b0629ef3af40db5c5dddedcbf5fc946eab0764d757fca75dc6ef972c6a85729530d6a1d558486149a10d22a71e22920ed1df779e04 WHIRLPOOL ad3f4fb0841bf486bf93c513804352d5e8704a33dd5f2260e70c69ea33cef06bb6a57708ae3c09a346c9955e6a465475e47ed6089b32fa50a4fef6c43ae41889
+DIST find_cruft-3.0.tar.gz 9983 SHA256 af10b309ffbe2f136a101d4096e1b2687ba10a68d92ef2cf472a71b397e22372 SHA512 c966114e4b5d1d4ee35031cb8a9ab456981cd75df66ae73153c6e170ad3641a774c031e389cf3cad0c99ef6cd5d3a86fd7f1c2e77be2ca68258df190f43dfbf9 WHIRLPOOL 146dfd82625f8587a346c5efda2161c46a14037cfa8d076d3c0282a2d9cc12d50b73cd1fe14aef668e4ff7a7f2bb4d5c7d98faf9dd023a79531ed569cb5f5073
