@@ -1,2 +1,2 @@
-DIST zsh-5.0.5-doc.tar.bz2 2940018 SHA256 e4f22bafaa8410bbc2d83f2d748ca4764365752c46f7e1099be54f2a62c492f2 SHA512 341e4a62c7c2367d17c54c5133b7c0a74e6c0becfaddd3c1f5dbe782300bbd74b0fc2066e892776cb52ce11cd0600739bfd5a7dd067eaae8a1d11b1b2aa0c3b0 WHIRLPOOL 48e021bc2caf840d048888faf5cafea5ce698968479e1c8791f33dc36f9b0f60db16ff481e88ce8c903480d905b728eb9ff9dfc8fbcb066d3698cc0cc3a02d8a
-DIST zsh-5.0.5.tar.bz2 3104375 SHA256 6624d2fb6c8fa4e044d2b009f86ed1617fe8583c83acfceba7ec82826cfa8eaf SHA512 34d69bed190cbc476bcdaa4b703fee1caaeae7e011fe7ea595b29bbd31df57bbe4d19b5940618e0c89a0a4b6c476f9ef03ce9829b4fb3735c1aedf309b0225a5 WHIRLPOOL bf02ca194261e15e88a9e26212644aa7be1afcc8e73cd6bb18ffb8e1c1d46a8742fee109d92a3b455c418258df9ae74dece21a05ff0e54e8c370af094512af16
+DIST zsh-5.0.6-doc.tar.bz2 2999237 SHA256 b273a568682682cc1f00885aba118c7400cacfdbc0ecdf32fd5f9b820b8acfd6 SHA512 22d0b1ac03426413e8132602efc812343e77ee0fda399da2601dfde8c92aabc38eda33a9b459a7ae44542ac8ad0f6c9b3e36e2134521cc0993a84ae573500fd8 WHIRLPOOL d837cadfae5ea6818c731ddb58252f2ae1f2919dd9a1efe804b7a6d2c32d8dd0d4ade9996e83950c479a3f5a4335d56d71f81bffc4de2410406d9840089de0a0
+DIST zsh-5.0.6.tar.bz2 3174858 SHA256 84ca509b141533a3b695e314fbce1200b86ff337ab7dd9e3414da05d86378845 SHA512 bd28ebf9adb4a85e6cb9c9bc1eb7ab412a0bf467a9769021d6cd93b13b99ae961a57158374b935e615b54be92074c7adfc22434d204646110adedef4ff526c3f WHIRLPOOL a3091bd096382e615777047814b2d7a04b34d03d7111db552f749aa978f236f9fa8a1426dbbe00e1172432cce35b34374d85d5e7e543c6d1f1bf9c53832d9969
