@@ -1,2 +1,1 @@
-DIST squashmount-6.3.tar.gz 42040 SHA256 84ddd130691f97ad7b422d8ea507ebdfa61704c8ec0e5e8348b4fa2edda9200e SHA512 f271dbc3ac0234da716aeeb523ee999f0efc0d3829188fad117c9fad5f5dd031e2a12282571ebbaeef2207a53a03572bd00be65169b02925e45ac34ea0e481bb WHIRLPOOL 3a7a63b6422b035f2b46a7e8bded94bb4e76a3125396c4d2e2bc402657b6f8ba086c0a926134695d5761aced55d2ff482aafa7c82980329a2752720cb27d0d7e
-DIST squashmount-8.6.tar.gz 51896 SHA256 1dc7c163d370a145eb5cf7214544c088cebc779886cb7c73bc55d3c213671dbe SHA512 a9ae73578e4a420ac0b0d0ad7c3a18cedd37410f37edb2dfc999f2641dea974ac38432281a8ff00a3fd7a11e031235ef426ca3de1f9c217845a3bcd697ab7891 WHIRLPOOL 89710245b8a1dd70c2d37281d6b49d7dc3f42e086c9fc9718928cb69503867375386da14fb11117da4b03bf676b9cd6abde079644c8af2e379550c8a608ee369
+DIST squashmount-8.7.tar.gz 52125 SHA256 95a804443f8de8a98c907bd62f2a124031a6eafb6a738fa860877aa13bd608ff SHA512 b5f0873201b39ff08d98f794416875eb6f4fc13f71a99c4b36aca4c54847c23f4d1d95dafdf9d807f895f9877c6a9ccae08387d3e1df6c4f0bb74c37754cf2bb WHIRLPOOL 99e99a5b0c3e99c8ae2244ad92098c60cf61bb0af361358b21501a070c6ac2d29ee1d178f58972f3463d7223f1778ed07f1cf0470113f3ccbaa019386e73bcec
