@@ -13,7 +13,4 @@
 		<bugs-to>mailto:martin@mvath.de</bugs-to>
 		<remote-id type="github">vaeth/squashmount</remote-id>
 	</upstream>
-	<use>
-		<flag name="examples">Install sample config as /etc/squashmount-example.pl instead of /etc/squashmount.pl</flag>
-	</use>
 </pkgmetadata>
